# maghimtelbot

./: .replit  README.md  catalog.json  index.html  keep_alive.py  main.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt
bot/: .env.example  bot.py  requirements.txt
bot/handlers/: ai_handlers.py  cart_handlers.py  catalog_handlers.py  main_handlers.py  order_handlers.py
bot/keyboards/: cart_keyboards.py  catalog_keyboards.py  main_keyboards.py  order_keyboards.py
bot/utils/: ai_assistant.py  cart.py  catalog.py  database.py  loyalty.py  messages.py  order.ру  orders.py  voice_processing.py
src/: App.tsx
src/components/: Analytics.tsx  BotSettings.tsx  Dashboard.tsx  Orders.tsx  ProductCatalog.tsx  Users.tsx
