[tool.poetry]
name = "cleanway-telegram-bot"
version = "1.0.0"
description = "CleanWay Telegram Bot with AI Assistant"
authors = ["CleanWay Team"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "3.4.1"
google-generativeai = "0.3.2"
gtts = "2.4.0"
requests = "2.31.0"
python-dotenv = "1.0.0"
aiofiles = "23.2.1"
aiohttp = "3.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"